On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	deleted:    diagrama.excalidraw
	modified:   src/App.css
	modified:   src/PanelRouter.jsx
	modified:   src/contexts/session.jsx
	modified:   src/panel.components/Sidebar.jsx
	renamed:    src/panel.components/CrudBackground.jsx -> src/panel.components/crud/CrudBackground.jsx
	renamed:    src/panel.components/CrudButtonOptions.jsx -> src/panel.components/crud/CrudButtonOptions.jsx
	renamed:    src/panel.components/CrudConfirm.css -> src/panel.components/crud/CrudConfirm.css
	renamed:    src/panel.components/CrudConfirm.jsx -> src/panel.components/crud/CrudConfirm.jsx
	renamed:    src/panel.components/CrudForm.css -> src/panel.components/crud/CrudForm.css
	renamed:    src/panel.components/CrudForm.jsx -> src/panel.components/crud/CrudForm.jsx
	renamed:    src/panel.components/CrudHead.jsx -> src/panel.components/crud/CrudHead.jsx
	renamed:    src/panel.components/CrudProgress.jsx -> src/panel.components/crud/CrudProgress.jsx
	renamed:    src/panel.components/CrudTable.css -> src/panel.components/crud/CrudTable.css
	renamed:    src/panel.components/CrudTable.jsx -> src/panel.components/crud/CrudTable.jsx
	renamed:    src/panel.components/CrudTableSkeleton.jsx -> src/panel.components/crud/CrudTableSkeleton.jsx
	modified:   src/panel.pages/Home.jsx
	modified:   src/theme.css

--- a/src/theme.css
+++ b/src/theme.css
@@ -8,13 +8,11 @@
     --c3: #20614f;
     --c3-txt: #fff;
 
-    --c1: #00cd56;
-
     --c1-bg: #242f3a;
-    --c1-txt: #fff;
+    --c1-txt: #ffffff;
 
-    --c2-bg: #00cd56;
-    --c2-txt: #1f1f1f;
+    --c2-bg: #20614f;
+    --c2-txt: #ffffff;
     --c2-txt2: #ffffff;
 
     --c3-bg: #e0e0e0;
