On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   src/App.css
	modified:   src/PanelRouter.jsx
	modified:   src/RouterPanel.css
	modified:   src/mocks/info.json
	modified:   src/panel.components/Header.jsx
	modified:   src/panel.components/Sidebar.jsx
	modified:   src/theme.css

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,4 +1,6 @@
 :root {
+    --gd1: linear-gradient(to right, #131b20, #122735, #122735, #122735, #131b20);
+
     --c1: #122735;
     --c1-txt: #fff;
 
@@ -7,7 +9,6 @@
 
     --c3: #20614f;
     --c3-txt: #fff;
-
     --c1-bg: #242f3a;
     --c1-txt: #ffffff;
 
