--- a/src/RouterPanel.css
+++ b/src/RouterPanel.css
@@ -68,7 +68,7 @@
     align-items: center;
     gap: 25px;
     height: 100%;
-    background: var(--c7-bg);
+    /* background: var(--c7-bg); */
     overflow: auto;
     padding: 30px var(--pdd);
 }
