On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   src/PanelRouter.jsx
	new file:   src/assets/JosefinSans-Regular.ttf
	modified:   src/components/Button.jsx
	modified:   src/index.css
	deleted:    src/panel.components/ModalProducts.jsx
	deleted:    src/panel.components/ShopCart.jsx
	renamed:    src/panel.components/SkeletonItem.jsx -> src/panel.components/crud/SkeletonItem.jsx
	renamed:    src/panel.components/Header.css -> src/panel.components/partials/Header.css
	renamed:    src/panel.components/Header.jsx -> src/panel.components/partials/Header.jsx
	renamed:    src/panel.components/Sidebar.css -> src/panel.components/partials/Sidebar.css
	renamed:    src/panel.components/Sidebar.jsx -> src/panel.components/partials/Sidebar.jsx
	renamed:    src/panel.components/Button.jsx -> src/panel.components/ui/Button.jsx
	modified:   src/panel.pages/Home.jsx
	modified:   src/panel.pages/Profile.jsx
	modified:   src/theme.css
	modified:   src/views/Login.jsx
	modified:   tailwind.config.js

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    src: url("./assets/JosefinSans-Regular.ttf");
+    font-family: josefin;
+}
+
+/* @font-face {
+    src: url("./assets/fonts/GreatVibes-Regular.ttf");
+    font-family: title2;
+} */
+
+/* @font-face{ */
+/* src: url("./assets/fonts/RobotoCondensed-Regular.ttf"); */
+/* src: local("roboto"); */
+/* font-weight: bold; */
+/* font-family: link; */
+/* } */
+/* 
+@font-face {
+    src: url("./assets/fonts/OpenSans-Regular.ttf");
+    font-family: content;
+} */
