--- a/src/theme.css
+++ b/src/theme.css
@@ -38,10 +38,10 @@
 :root {
     --gd1: linear-gradient(to right, #131b20, #122735, #122735, #122735, #131b20);
 
-    --c1: #122735;
+    --c1: #0074b3;
     --c1-txt: #fff;
 
-    --c2: #08301d;
+    --c2: #65b237;
     --c2-txt: #fff;
 
     --c3: rgba(0, 0, 0, 0.2);
