--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    transition: all 0.3s ease;
+    font-family: sans-serif;
+    outline: none;
+    border-style: none;
+}
+
 body {
     background-image: var(--gd1);
 }
