--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,26 @@
 body {
     background-image: var(--gd1);
 }
+
+/* _____________ SCROLL _ STYLES ________________ */
+.scroll-style {
+    scroll-behavior: smooth;
+}
+.scroll-style::-webkit-scrollbar {
+    width: 7px;
+    height: 5px;
+}
+
+.scroll-style::-webkit-scrollbar-thumb {
+    background: var(--c3);
+    border-radius: 4px;
+}
+
+.scroll-style::-webkit-scrollbar-thumb:hover {
+    background: var(--c3);
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.scroll-style::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0);
+}
