Co-authored-by: josearizaga009 <josearizaga009@users.noreply.github.com>
Changes to be committed:
	modified:   index.html
	modified:   src/PanelRouter.jsx
	modified:   src/components/Button.jsx
	new file:   src/hooks/useCrudPanel.js
	modified:   src/panel.components/crud/CrudConfirm.jsx
	modified:   src/panel.components/crud/CrudForm.css
	modified:   src/panel.components/crud/CrudForm.jsx
	modified:   src/panel.components/crud/CrudHead.jsx
	modified:   src/panel.components/crud/CrudTable.css
	modified:   src/panel.components/crud/CrudTable.jsx
	deleted:    src/panel.components/partials/Header.css
	modified:   src/panel.components/partials/Header.jsx
	modified:   src/panel.components/partials/Sidebar.jsx
	new file:   src/panel.components/ui/Search.jsx
	new file:   src/panel.pages/Clients.jsx
	modified:   src/panel.pages/Home.jsx
	new file:   src/panel.pages/Info.jsx
	new file:   src/panel.pages/Lockers.jsx
	new file:   src/panel.pages/ProductBuys.jsx
	new file:   src/panel.pages/ProductSales.jsx
	new file:   src/panel.pages/Suppliers.jsx
	modified:   src/panel.pages/Users.jsx
	modified:   src/services/clients.js
	modified:   src/services/info.js
	new file:   src/services/lockers.js
	new file:   src/services/productBuys.js
	new file:   src/services/productIns.js
	new file:   src/services/productOuts.js
	new file:   src/services/productSales.js
	new file:   src/services/suppliers.js
	modified:   src/theme.css

--- a/src/panel.components/crud/CrudTable.css
+++ b/src/panel.components/crud/CrudTable.css
@@ -17,10 +17,9 @@
     width: 100%;
 
     /* background: rgba(0, 0, 0, 0.1); */
-    background: var(--c3-bg);
-    border-top: solid 3px var(--c6-bg);
-    border-radius: 3px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+    background: var(--c3);
+    border-top: solid 2px var(--c3-txt2);
+    border-radius: 6px;
 }
 
 .panel-crudtable-component.open {
@@ -49,10 +48,11 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    background: #ffffff;
-    color: #000000;
+    background: var(--c4);
+    backdrop-filter: blur(2px);
+    color: var(--c3-txt2);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-    --radius: 4px;
+    --radius: 10px;
 }
 
 .panel-crudtable-component .ideatable table thead tr th:first-child {
@@ -93,7 +93,8 @@
 }
 
 .panel-crudtable-component .ideatable table tbody tr td {
-    color: var(--color3-txt);
+    color: var(--c3-txt);
+    opacity: 0.8;
 }
 
 .panel-crudtable-component .ideatable table tbody tr td .ideabutton.disabled:hover:before {
