termine de adaptar todo el panel al nuevo diseño glass moderno
Changes to be committed:
	modified:   src/App.css
	modified:   src/components/Loading.jsx
	deleted:    src/panel.components/crud/CrudConfirm.css
	modified:   src/panel.components/crud/CrudConfirm.jsx
	deleted:    src/panel.components/crud/CrudForm.css
	modified:   src/panel.components/crud/CrudForm.jsx
	new file:   src/panel.components/crud/CrudInput.jsx
	modified:   src/panel.components/crud/CrudProgress.jsx
	deleted:    src/panel.components/crud/CrudTable.css
	modified:   src/panel.components/crud/CrudTable.jsx
	modified:   src/panel.components/crud/CrudTableSkeleton.jsx
	modified:   src/panel.pages/Clients.jsx
	modified:   src/panel.pages/Lockers.jsx
	modified:   src/panel.pages/ProductBuys.jsx
	modified:   src/panel.pages/ProductSales.jsx
	modified:   src/panel.pages/Products.jsx
	modified:   src/panel.pages/Suppliers.jsx
	modified:   src/panel.pages/Users.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@ body {
     background-image: var(--gd1);
 }
 
+.rnc__notification-container--bottom-right .rnc__notification-item--success,
+.rnc__notification-container--bottom-right .rnc__notification-item--danger,
+.rnc__notification-container--bottom-right .rnc__notification-item--info,
+.rnc__notification-container--bottom-right .rnc__notification-item--warning {
+    background: var(--c3);
+    backdrop-filter: blur(10px);
+}
+
 /* _____________ SCROLL _ STYLES ________________ */
 .scroll-style {
     scroll-behavior: smooth;
