--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,23 @@ body {
     background-image: var(--gd1);
 }
 
+:root {
+    --max-width-cert: 700px;
+    --max-w: 1200px;
+    --max-width: var(--max-w);
+    --padding: 50px;
+    --header-height: 64px;
+    --box-shadow: 0 2.5px 10px 0 rgba(0, 0, 0, 0.1);
+    --radius: 5px;
+    --transition: all 0.2s ease;
+}
+
+.container {
+    width: 100%;
+    max-width: var(--max-w);
+    margin: 0 auto;
+}
+
 .rnc__notification-container--bottom-right .rnc__notification-item--success,
 .rnc__notification-container--bottom-right .rnc__notification-item--danger,
 .rnc__notification-container--bottom-right .rnc__notification-item--info,
